Fix Alignment of Github Icon on Home "Start Coding" button

--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -137,3 +137,10 @@ ul {list-style-type: none;}
 -o-border-radius: 12px;
 border-radius: 12px;
 }
+
+
+
+.foundicon-github {
+  vertical-align: middle;
+}
+
