--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -20,7 +20,9 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#8e4487', end
 
 
   .social.foundicon-github {
-    font-size: 1.2em;
+    font-size: 1.8em;
+    vertical-align:middle;
+    margin-right:3px;
   }
 }
 
@@ -29,3 +31,4 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#8e4487', end
 #mission {padding-bottom: 30px;}
 
 #secondary_welcomes {padding-bottom: 30px;}
+
